llm-d-kvcache-offload-eval/manifests/gpu-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-test
  namespace: llm-d-pfc-cpu
spec:
  runtimeClassName: nvidia
  restartPolicy: Never
  containers:
  - name: cuda-test
    image: nvidia/cuda:12.4.1-devel-ubi9
    command: ["nvidia-smi"]
    resources:
      limits:
        nvidia.com/gpu: "1"
