llm-d-kvcache-offload-eval/manifests/llm-d-model-server-v0.5.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-d-model-server
  namespace: llm-d-pfc-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      llm-d.ai/inference-serving: "true"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        llm-d.ai/accelerator-vendor: nvidia
        llm-d.ai/hardware-variant: gpu
        llm-d.ai/inference-serving: "true"
    spec:
      containers:
      - name: vllm
        image: ghcr.io/llm-d/llm-d-cuda:v0.5.1
        imagePullPolicy: IfNotPresent
        command:
        - /bin/bash
        - -c
        args:
        - |
          exec vllm serve Qwen/Qwen3-0.6B --tensor-parallel-size 2 --port 8000 --max-num-seq 1024
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          requests:
            nvidia.com/gpu: "2"
            memory: 200Gi
          limits:
            nvidia.com/gpu: "2"
        volumeMounts:
        - name: data
          mountPath: /data
        - name: shm
          mountPath: /dev/shm
        startupProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 1
          failureThreshold: 600
        readinessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 1
          failureThreshold: 1
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 1
          failureThreshold: 5
          successThreshold: 1
          timeoutSeconds: 1
        lifecycle:
          preStop:
            sleep:
              seconds: 30
      enableServiceLinks: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 130
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: model-storage-pvc
      - name: shm
        emptyDir:
          medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: llm-d-model-server
  namespace: llm-d-pfc-cpu
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    llm-d.ai/inference-serving: "true"
  type: ClusterIP
